--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,9 +3,9 @@
     package="jp.alij.paydroid"
     android:versionCode="1"
     android:versionName="1.0" >
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
-    
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
@@ -17,8 +17,9 @@
         android:theme="@android:style/Theme.Black.NoTitleBar" >
         <activity
             android:name="jp.alij.paydroid.activities.PaymentActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateVisible" >
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
